@@ -4,13 +4,15 @@ import com.StrategyPatternTripTop.StrategyPattern.strategy.model.ReisOptieModel;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class GoedkoopsteStrategieReisOptie implements ReisOptieSelectieStrategie {
     @Override
     public List<ReisOptieModel> selecteer(List<ReisOptieModel> opties) {
         return opties.stream()
-                .sorted(Comparator.comparing(ReisOptieModel::getPrijs))
+                .filter(ReisOptieModel::isBeschikbaar)
+                .sorted(Comparator.comparingDouble(ReisOptieModel::getPrijs))
                 .limit(1)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
